<resources>
    <string name="app_name">Turnover management</string>
    <string name="title_orders">Orders</string>
    <string name="title_products">Products</string>
    <string name="title_customers">Customers</string>


    <string name="language_selection">Select Language</string>
    <string name="language_selection_summary">Choose your preferred language</string>

    <string-array name="language_entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>

    <string-array name="language_values">
        <item>en</item>
        <item>ru</item>
    </string-array>
    <string name="customer_name_format">Name: %1$s %2$s %3$s</string>
    <string name="customer_phone_format">Phone: %s</string>
    <string name="customer_email_format">Email: %s</string>
    <string name="customer_not_found">Customer information not found</string>
    <string name="product_name_format">Name: %s</string>
    <string name="product_amount_format">Amount: %d</string>
    <string name="product_price_format">Price: $%.2f</string>
    <string name="product_not_found">Product info not found</string>
    <string name="settings__clear_data">Clear data</string>
    <string name="settings__regenerate_test_data">Regenerate test data</string>
    <string name="settings__show_archived_data">Show archived data</string>
    <string name="settings__dark_theme">Dark theme</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="view_order__order_details">Order details</string>
    <string name="view_order__address_information">Address information</string>
    <string name="view_order__customer_information">Customer information</string>
    <string name="view_order__product_information">Product information</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="order_item__headline">Order #%d</string>
    <string name="amount">Amount</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="home">Home</string>
    <string name="edit_order__max_amount_hint">Max: %d</string>
    <string name="no_items_here">No items here</string>
    <string name="add_new">Add new</string>
    <string name="customer">Customer</string>
    <string name="product">Product</string>
    <string name="save">Save</string>
    <string name="edit_order__headline">Edit order</string>
    <string name="element_was_deleted">This item is deleted</string>
    <string name="view_order__headline">View order</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="edit_view_customer__headline">Edit\\view customer</string>
    <string name="edit_view_product__headline">Edit\\view product</string>
    <string name="price">Price</string>
    <string name="product_name">Product name</string>
    <string name="actual_version">Actual version</string>
    <string name="product_price_number">Price: %s</string>
</resources>