<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.liberty.turnovermanagement.orders.list.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.liberty.turnovermanagement.products.list.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/navigation_customers"
        android:name="com.liberty.turnovermanagement.customers.CustomersFragment"
        android:label="@string/title_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.liberty.turnovermanagement.settings.SettingsFragment"
        android:label="Настройки"
        tools:layout="@layout/fragment_settings" />
</navigation>